--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Trabajo Practico N°4 del modulo 2 del curso de FullStack de RollingCode School">
     <meta name="author" content="Torres Flores Kevin Stephan">
-    <title>TP 4 - Practica con POO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>TP 4</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-light bg-light d-flex align-items-center justify-content-center justify-content-lg-start">
+            <a class="navbar-brand center my-1" href="./index.html">
+              <img src="./assets/img/logo.png" width="50" height="50" class="d-inline-block align-top mx-2" alt="logo">
+            </a>
+            <h1 class="fs-2 text-center">TP 4 -  Practica con POO</h1>
+        </nav>
+    </header>
+    <main>
+        <section class="d-flex align-items-center flex-column vw-75">
+            <h2>Punto 1</h2>
+            <div>
+                <button type="button" class="btn btn-primary" id="btnEncender">Encender</button>
+                <button type="button" class="btn btn-danger" id="btnApagar">Apagar</button>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <h2>Punto 2</h2>
+            
+        </section>
+    </main>
+    <footer class="bg-black px-3">
+        <h5 class="text-light ">RollingCode School - TP 1 - Torres Flores Kevin Stephan &copy;</h5>
+    </footer>
     <script src="./js/punto01.js"></script>
 </body>
 </html>
