Se termino el punto 2

--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
             </div>
         </section>
         <hr>
-        <section>
+        <section class="d-flex align-items-center flex-column vw-75">
             <h2>Punto 2</h2>
-            
+            <div>
+                <button type="button" class="btn btn-success" id="btnIngresar">Ingresar</button>
+                <button type="button" class="btn btn-danger" id="btnExtraer">Extraer</button>
+                <button type="button" class="btn btn-primary" id="btnInformar">Informar</button>
+            </div>
         </section>
     </main>
     <footer class="bg-black px-3">
         <h5 class="text-light ">RollingCode School - TP 1 - Torres Flores Kevin Stephan &copy;</h5>
     </footer>
     <script src="./js/punto01.js"></script>
+    <script src="./js/punto02.js"></script>
 </body>
 </html>
