Inicio el punto 3

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 <button type="button" class="btn btn-primary" id="btnInformar">Informar</button>
             </div>
         </section>
+        <hr>
+        <section class="d-flex align-items-center flex-column vw-75">
+            <h2>Punto3</h2>
+            
+        </section>
     </main>
     <footer class="bg-black px-3">
         <h5 class="text-light ">RollingCode School - TP 1 - Torres Flores Kevin Stephan &copy;</h5>
