Se agrego la clase rectangulo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         <hr>
         <section class="d-flex align-items-center flex-column vw-75">
             <h2>Punto3</h2>
-            
+            <form>
+                <button type="button" class="btn btn-success" id="btnCrearRec">Crear Reactángulo</button>
+                <button type="button" class="btn btn-danger" id="btnPerimetro">Calcular Perímetro</button>
+                <button type="button" class="btn btn-primary" id="btnArea">Calcular Área</button>
+            </form>
         </section>
     </main>
     <footer class="bg-black px-3">
