Se termino el punto 4

--- a/index.html
+++ b/index.html
@@ -38,12 +38,17 @@
         </section>
         <hr>
         <section class="d-flex align-items-center flex-column vw-75">
-            <h2>Punto3</h2>
+            <h2>Punto 3</h2>
             <div>
                 <button type="button" class="btn btn-success" id="btnMostrarRec">Mostrar Reactángulo</button>
                 <button type="button" class="btn btn-danger" id="btnPerimetro">Calcular Perímetro</button>
                 <button type="button" class="btn btn-primary" id="btnArea">Calcular Área</button>
             </div>
+        </section>
+        <hr>
+        <section class="d-flex align-items-center flex-column vw-75">
+            <h2>Punto 4</h2>
+            <button type="button" class="btn btn-success" id="btnListarProductos">Listar Productos</button>
         </section>
     </main>
     <footer class="bg-black px-3">
@@ -52,5 +57,7 @@
     <script src="./js/punto01.js"></script>
     <script src="./js/punto02.js"></script>
     <script src="./js/punto03.js"></script>
+    <script src="./js/punto04.js"></script>
+
 </body>
 </html>
