Se creo la clase persona

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             <h2>Punto 4</h2>
             <button type="button" class="btn btn-success" id="btnListarProductos">Listar Productos</button>
         </section>
+        <hr>
+        <section class="d-flex align-items-center flex-column vw-75">
+            <h2>Punto 5</h2>
+            
+        </section>
     </main>
     <footer class="bg-black px-3">
         <h5 class="text-light ">RollingCode School - TP 1 - Torres Flores Kevin Stephan &copy;</h5>
@@ -58,6 +63,7 @@
     <script src="./js/punto02.js"></script>
     <script src="./js/punto03.js"></script>
     <script src="./js/punto04.js"></script>
+    <script src="./js/punto05.js"></script>
 
 </body>
 </html>
