--- a/index.html
+++ b/index.html
@@ -53,7 +53,31 @@
         <hr>
         <section class="d-flex align-items-center flex-column vw-75">
             <h2>Punto 5</h2>
-            
+            <div>
+                <button type="button" class="btn btn-success" id="btnMostrarGeneracion1">Mostrar Generación</button>
+                <button type="button" class="btn btn-danger" id="btnMayorDeEdad1">Es mayor de edad</button>
+                <button type="button" class="btn btn-primary" id="btnMostrarDatos1">Mostrar Datos</button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-success" id="btnMostrarGeneracion2">Mostrar Generación</button>
+                <button type="button" class="btn btn-danger" id="btnMayorDeEdad2">Es mayor de edad</button>
+                <button type="button" class="btn btn-primary" id="btnMostrarDatos2">Mostrar Datos</button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-success" id="btnMostrarGeneracion3">Mostrar Generación</button>
+                <button type="button" class="btn btn-danger" id="btnMayorDeEdad3">Es mayor de edad</button>
+                <button type="button" class="btn btn-primary" id="btnMostrarDatos3">Mostrar Datos</button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-success" id="btnMostrarGeneracion4">Mostrar Generación</button>
+                <button type="button" class="btn btn-danger" id="btnMayorDeEdad4">Es mayor de edad</button>
+                <button type="button" class="btn btn-primary" id="btnMostrarDatos4">Mostrar Datos</button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-success" id="btnMostrarGeneracion5">Mostrar Generación</button>
+                <button type="button" class="btn btn-danger" id="btnMayorDeEdad5">Es mayor de edad</button>
+                <button type="button" class="btn btn-primary" id="btnMostrarDatos5">Mostrar Datos</button>
+            </div>
         </section>
     </main>
     <footer class="bg-black px-3">
