Se termino el punto 6

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                 <button type="button" class="btn btn-primary" id="btnMostrarDatos5">Mostrar Datos</button>
             </div>
         </section>
+        <hr>
+        <section class="d-flex align-items-center flex-column vw-75">
+            <h2>Punto 6</h2>
+            <div>
+                <button type="button" class="btn btn-success" id="btnMostrarLibro1">Mostrar Libro 1</button>
+                <button type="button" class="btn btn-danger" id="btnMostrarLibro2">Mostrar Libro 2</button>
+                <button type="button" class="btn btn-primary" id="btnMasPaginas">Libro con mayor numero de Páginas</button>
+            </div>
+        </section>
     </main>
     <footer class="bg-black px-3">
         <h5 class="text-light ">RollingCode School - TP 1 - Torres Flores Kevin Stephan &copy;</h5>
@@ -88,6 +97,7 @@
     <script src="./js/punto03.js"></script>
     <script src="./js/punto04.js"></script>
     <script src="./js/punto05.js"></script>
+    <script src="./js/punto06.js"></script>
 
 </body>
 </html>
