Se termino el punto 7

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
                 <button type="button" class="btn btn-primary" id="btnMasPaginas">Libro con mayor numero de Páginas</button>
             </div>
         </section>
+        <hr>
+        <section class="d-flex align-items-center flex-column vw-75">
+            <h2>Punto 7</h2>
+            <div>
+                <button type="button" class="btn btn-success" id="btntamanioAgenda">Definir tamaño de la agenda</button>
+                <button type="button" class="btn btn-danger" id="btnAbrirMenu" disabled>Abrir menú</button>
+            </div>
+        </section>
     </main>
     <footer class="bg-black px-3">
         <h5 class="text-light ">RollingCode School - TP 1 - Torres Flores Kevin Stephan &copy;</h5>
@@ -98,6 +106,7 @@
     <script src="./js/punto04.js"></script>
     <script src="./js/punto05.js"></script>
     <script src="./js/punto06.js"></script>
+    <script src="./js/punto07.js"></script>
 
 </body>
 </html>
